--- a/css/Login.css
+++ b/css/Login.css
@@ -33,7 +33,7 @@ body {
     overflow: hidden;
 }
 
-/* LEFT SIDE */
+/* LEFT SIDE form of the area */
 .card-left {
     flex: 1.4;
     padding: 26px 26px 20px 26px;
