fix oversizing textbox

--- a/css/send_reset.css
+++ b/css/send_reset.css
@@ -1,4 +1,8 @@
 /* PAGE BACKGROUND */
+* {
+    box-sizing: border-box;
+}
+
 body {
     margin: 0;
     padding: 0;
@@ -9,7 +13,6 @@ body {
     min-height: 100vh;
     overflow-x: hidden;
 }
-
 /* MAIN CONTAINER */
 .reset-container {
     background: #ffffff;
